[tool.poetry]
name = "shutterstock-spider"
version = "0.1.0"
description = ""
authors = ["alexeygrachev <agrachev@cindicator.com>"]
readme = "README.md"
packages = [{include = "shutterstock_spider"}]

[tool.poetry.dependencies]
python = "^3.9"
scrapy = "^2.7.1"
pandas = "^1.5.2"
jsonpath-ng = "^1.5.3"
wget = "^3.2"
jupyter = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

